modifiquei o codigo e adicionei imagens na pagina

--- a/index.html
+++ b/index.html
@@ -1,24 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head> <!-- informação da pagina -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-escalable=no, maximum-scale=1.0, minimun-scaled=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pedro Gil</title>
 </head>
 <body>
-    <h1>Pedro Luis Gil Bonett</h1>
-    <img src="img/pedro.jpeg" alt="Foto de Pedro Gil" width="10%">
-    <p>Meu nome é Pedro Luis Gil Bonett, Sou Venezuelano, nasci na cidade de Carúpano Estado Sucre, tenho 30 anos, estudei Engenharia de Petroleo mas não sou formado, deixei meus estudos para vir no Brasil procurar uma melhor qualidade de vida. Cheguei no Brasil no 2018, moro atualmente en Manaus estado Amazonas, sou gerente de um estacionamento e atualmente estou estudando Programação full stack na Toti. <br>
-    <h2>Curiosidades sobre min</h2>
-    <ul><li>Gosto de Correr ao ar livre</li> </ul>
-    <ul><li>Tenho 3 pets (2 gatos e 1 cachorro)</li></ul>
-    <ul><li>Gosto de dançar musica latina</li></ul>
-    <ul><li>Gosto de Café</li></ul>
-    <ul><li>Tenho um irmão gêmeo</li></ul> 
-    <h2>Pode me seguir nas redes socias</h2>
-    <ul><a href="https://www.linkedin.com/in/gilbonett/">Linkedin</a></ul>
-    <ul><a href="https://github.com/gilbonett">Github</a></ul>
-    <h2>YOUTUBE</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/03PGZ3ZK5zg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <header> 
+      <div>
+         <nav> <!-- Navegação menu -->
+                <ul>
+                  <a href="#sobre-mim">Sobre min</a>
+                  <a href="#objetivos">Objetivos</a>
+                  <a href="#projetos">Projetos</a>
+                  <a href="#redes">Contato</a>
+               </ul>
+         </nav>
+         <div><!-- Conteudo Cabeçalho -->
+            <h1>Pedro Gil Bonett</h1>
+                <span></span>
+                <h2>Futuro Programador Full Stack</h2>
+         </div>
+         <div>
+            <img src="img/pedro.jpeg" alt="Foto de Pedro Gil" width="10%"> <br>    
+         </div>
+     </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/03PGZ3ZK5zg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </header>
+    <main>
+        <section>
+         <article>
+            <h2 id="sobre-mim">Sobre Min</h2>
+             <p>Meu nome é Pedro Luis Gil Bonett, Sou Venezuelano, nasci na cidade de Carúpano Estado Sucre, tenho 30 anos, estudei Engenharia de Petroleo mas não sou formado, deixei meus estudos para vir no Brasil procurar uma melhor qualidade de vida. Cheguei no Brasil no 2018, moro atualmente en Manaus estado Amazonas, sou gerente de um estacionamento e atualmente estou estudando Programação full stack na Toti.
+            <h2>Curiosidades sobre min</h2>
+             <ul><li>Gosto de Correr ao ar livre</li> </ul>
+             <ul><li>Tenho 3 pets (2 gatos e 1 cachorro)</li></ul>
+             <ul><li>Gosto de dançar musica latina</li></ul>
+             <ul><li>Gosto de Café</li></ul>
+             <ul><li>Tenho um irmão gêmeo</li></ul>
+         </article>
+         <article>
+            <h2 id="objetivos">Objetivos</h2>
+             <ul>
+                 <li>1</li><br>
+                 <li>2</li><br>
+                 <li>3</li><br>
+                 <li>4</li><br>
+                 <li>5</li><br>
+             </ul>
+         </article>
+         <article>
+             <h2 id="projetos">Projetos</h2>
+             <ul>
+             <li><a href="">a</a></li> <br>
+             <li><a href="">b</a></li> <br>
+             <li><a href="">c</a></li> <br>
+            </ul>
+         </article>
+         <article>
+             <h2 id="redes">Pode me seguir nas redes socias</h2> <!-- Redes Socias -->
+             <ul><a href="https://www.linkedin.com/in/gilbonett/" target="_blank">Linkedin</a></ul> <img src="img/linkedin.png" alt="logo-linkedin" width="50" height="50">
+             <ul><a href="https://github.com/gilbonett" target="_blank">Github</a></ul> <img src="img/github.png" alt="logo-github" width="50" height="50">
+             <ul><a href="https://www.instagram.com/gilbonett/" target="_blank">Instagram</a></ul> <img src="img/instagram.png" alt="logo-instagram" width="50" height="50">
+         </article>
+        </section>
+    </main>
+    <footer>
+    <div>
+          <p> Entre en contacto atraves<a href="mailto:gilbonett@gmail.com">Email</a></p>
+         &copy;2022 Pedro Gil Bonett  
+    </div>
+    </footer>
 </body>
 </html>
