adicionei formulario na pagina

--- a/index.html
+++ b/index.html
@@ -65,11 +65,30 @@
              <ul><a href="https://www.instagram.com/gilbonett/" target="_blank">Instagram</a></ul> <img src="img/instagram.png" alt="logo-instagram" width="50" height="50">
          </article>
         </section>
+        <div>
+            <form action="https://www.google.co.ve" method="get">
+                <ul>
+                 <li>
+                   <label for="name">Nome:</label>
+                   <input type="text" id="name" name="user_name">
+                 </li>
+                 <li>
+                   <label for="mail">Email:</label>
+                   <input type="email" id="mail" name="user_mail">
+                 </li>
+                 <li>
+                   <label for="msg">Mensagem:</label>
+                   <textarea id="msg" name="user_message"></textarea><br><br>
+                   <button type="submit">Enviar</button>
+                 </li>
+                </ul>
+               </form>
+        </div>
     </main>
     <footer>
     <div>
           <p> Entre en contacto atraves<a href="mailto:gilbonett@gmail.com">Email</a></p>
-         &copy;2022 Pedro Gil Bonett  
+         &copy;2022 Pedro Gil Bonett 
     </div>
     </footer>
 </body>
