Fiz algumas mudanças no codigo, adicionei objetivos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt-BR">
 <head> <!-- informação da pagina -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-escalable=no, maximum-scale=1.0, minimun-scaled=1.0">
@@ -43,19 +43,15 @@
          <article>
             <h2 id="objetivos">Objetivos</h2>
              <ul>
-                 <li>1</li><br>
-                 <li>2</li><br>
-                 <li>3</li><br>
-                 <li>4</li><br>
-                 <li>5</li><br>
-             </ul>
+                 <li>Ser um grande profissional na area da tecnologia</li><br>
+                 <li>Desenvolver habilidades pessoais, a capacidade de me adaptar a mudanças e trabalhar sobpressão</li><br>
+                 <li>Conquistar uma vaga no mercado de trabalho</li><br>
          </article>
          <article>
              <h2 id="projetos">Projetos</h2>
              <ul>
-             <li><a href="">a</a></li> <br>
-             <li><a href="">b</a></li> <br>
-             <li><a href="">c</a></li> <br>
+             <li><a href="https://github.com/gilbonett/ExercicioAula6.git" target="_blank">Rascunhei a separação de um template e criei a marcação de texto.</a></li> <br>
+             <li><a href="https://github.com/gilbonett/arepa.git" target="_blank">Criei a Receita de uma comida</a></li> <br>
             </ul>
          </article>
          <article>
@@ -65,6 +61,7 @@
              <ul><a href="https://www.instagram.com/gilbonett/" target="_blank">Instagram</a></ul> <img src="img/instagram.png" alt="logo-instagram" width="50" height="50">
          </article>
         </section>
+        <br>
         <div>
             <form action="https://www.google.co.ve" method="get">
                 <ul>
