atualizando meu Html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                 <h2>Futuro Programador Full Stack</h2>
          </div>
          <div>
-            <img src="img/pedro.jpeg" alt="Foto de Pedro Gil" width="10%"> <br>    
+            <img src="img/pedro.jpeg" alt="Foto de Pedro Gil" width="10%"> 
          </div>
-     </div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/03PGZ3ZK5zg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </header>
     <main>
         <section>
