--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <a href="#home">Home</a>
  <a href="#sobre">Sobre mim</a>
  <a href="#projeto">Projetos</a>
- <a href="#contato">Contatos</a>
+ <a href="#contato">Contato</a>
 </nav>
 </header>
 <div id="home" class="hero container">
