Melhorei a responsividade do meu portfolio e separei o CSS por arquivos dependendo da seção do HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pedro Gil Bonett</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/tema-dark.css">
-    <link rel="stylesheet" href="/CSS/navagação.css">
+    <link rel="stylesheet" href="/CSS/navegacao.css">
     <link rel="stylesheet" href="/CSS/heroImage.css">
     <link rel="stylesheet" href="/CSS/sobremim.css">
     <link rel="stylesheet" href="/CSS/formulario.css">
