Integração da API de Pokemon em meu portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
  <a href="#home">Home</a>
  <a href="#sobre">Sobre mim</a>
  <a href="#projeto">Projetos</a>
- <a href="#contato">Contatos</a>
+ <a href="#contato">Contatos</a> 
+ <a href="/pokedex.html">Pokedex API</a>
+
  <button class="btn-mode">🌙</button>
 </nav>
 </header>
@@ -110,9 +112,9 @@
     </div>
 
     <div class="projeto">
-      <a href="https://layout.gilbonett.repl.co/" target="_blank"> <img src="img/1.png" alt="Layout"> </a>
-      <h3>Layout Responsivo</h3>
-      <p>Realizei layout de uma pagina com diferentes elementos HTML</p>
+      <a href="/pokedex.html" target="_blank"> <img src="img/pokedex.jpg" alt="pokemon"> </a>
+      <h3>Pokedex API</h3>
+      <p>Integração da API de Pokemon</p>
     </div>
 
     <div class="projeto">
