--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <div class="projeto">
       <a href="https://CambioGilBonett.gilbonett.repl.co" target="_blank" > <img src="img/3.png" alt="Figma"> </a>
-      <h3>Conversor de Monedas</h3>
+      <h3>Conversor de Moedas</h3>
       <p>Projeto em HTML,CSS e JavaScript de Conversor de Reais a Bolivares</p>
       
     </div>
