--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedro Gil Bonett</title>
-    <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="./CSS/tema-dark.css">
-    <link rel="stylesheet" href="./CSS/navegacao.css">
-    <link rel="stylesheet" href="./CSS/heroImage.css">
-    <link rel="stylesheet" href="./CSS/sobremim.css">
-    <link rel="stylesheet" href="./CSS/formulario.css">
-    <link rel="stylesheet" href="./CSS/media.css">
-    <link rel="stylesheet" href="./CSS/form_validacao.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tema-dark.css">
+    <link rel="stylesheet" href="navegacao.css">
+    <link rel="stylesheet" href="heroImage.css">
+    <link rel="stylesheet" href="sobremim.css">
+    <link rel="stylesheet" href="formulario.css">
+    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="form_validacao.css">
     
 </head>
 <body data-dark>
