corrigindo erros nas rutas de logos das tecnologias

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 <!-- Section Tecnologias -->
 <h2 id="tecno" class="tecnologias">Tecnologias</h2>
 <section class="container_tecnologias">
-  <img class="icon" src="/img/git.png" alt="logo git">
-  <img class="icon" src="/img/html.png" alt="logo html">
-  <img class="icon" src="/img/css3.png" alt="logo css3">
-  <img class="icon" src="/img/javascript.png" alt="logo javascript">
-  <img class="icon" src="/img/mongoDB.png" alt="logo mongoDB">
-  <img class="icon" src="/img/SQL.png" alt="logo SQL">
-  <img class="icon" src="/img/nodejs.png" alt="logo nodejs">
-  <img class="icon" src="/img/python.png" alt="logo Python">
+  <img class="icon" src="img/git.png" alt="logo git">
+  <img class="icon" src="img/html.png" alt="logo html">
+  <img class="icon" src="img/css3.png" alt="logo css3">
+  <img class="icon" src="img/javascript.png" alt="logo javascript">
+  <img class="icon" src="img/mongoDB.png" alt="logo mongoDB">
+  <img class="icon" src="img/SQL.png" alt="logo SQL">
+  <img class="icon" src="img/nodejs.png" alt="logo nodejs">
+  <img class="icon" src="img/python.png" alt="logo Python">
 </section>
 
 
