--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="box box2">
-    <img src="img/pedro.jpeg" alt="imagen pedro" width="250" height="250">
+    <img src="img/DevJr.png" alt="imagen pedro" width="250" height="250">
     </div>
 
 </section>
