--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 </header>
 
 <section id="home" class="hero container">
-    <div class="box box0"><h1 data-dark="">Pedro Gil Bonett</h1></div>
     <div class="box box1">
         <a href="https://www.instagram.com/gilbonett/"  target="_blank fel="noopener> <img src="img/instagram.png" width="40" height="40" alt="instagram"></a>
         
-        <a href="https://github.com/gilbonett" target="_blank" fel="noopener"><img src="img/github.png"
+        <a href="https://github.com/gilbonett" target="_blank" fel="noopener"><img src="https://visualpharm.com/assets/720/Github-595b40b65ba036ed117d442f.svg"
         width="40" height="40" alt="github"  class="imagenes-rodape"></a>
             
         <a href="https://www.linkedin.com/in/gilbonett/"  target="_blank fel="noopener> <img src="img/linkedin.png"    width="40" height="40" alt="linkedin"></a> 
